# FinSentimentAI

./: .env.example  .gitignore  CLAUDE.md  RAILWAY.md  README.en.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  database.py  docker-entrypoint.sh  main.py  pyproject.toml  railway.scheduler.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_sentiment_metadata.py  0003_app_settings.py  0004_refresh_jobs.py  0005_news_translations.py  0006_per_user_isolation.py  0007_google_auth.py  0008_cascade_stock_delete.py
backend/models/: __init__.py  app_setting.py  comment.py  market_summary.py  news.py  news_translation.py  refresh_job.py  sentiment.py  stock.py  user.py
backend/routers/: __init__.py  admin.py  auth.py  market.py  news.py  refresh_jobs.py  stocks.py
backend/schemas/: __init__.py  market.py  news.py  refresh.py  stock.py  user.py
backend/scripts/: backfill_sentiment.py  compare_baselines.py  run_daily_summary.py  run_pipeline.py  run_scheduler.py  seed_stocks.py  smoke_fetchers.py  smoke_sentiment.py
backend/services/: auth.py  content_extractor.py  crypto.py  daily_summary.py  pipeline.py  refresh_runner.py  scheduler.py  sentiment_analyzer.py  settings_store.py  stock_lookup.py  translator.py
backend/services/fetchers/: __init__.py  alpha_vantage.py  base.py  finnhub.py  marketaux.py  newsapi.py  ptt.py  stocktwits.py
backend/tests/: test_auth.py  test_content_extractor.py  test_daily_summary.py  test_fetchers.py  test_pipeline.py  test_scheduler.py  test_sentiment_analyzer.py
(+54 files in other folders)
