[project]
name = "finsentiment-backend"
version = "0.1.0"
description = "FinSentiment AI backend — FastAPI + FinBERT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "apscheduler>=3.10",
    "trafilatura>=1.12",
    "loguru>=0.7",
    "aiosqlite>=0.22.1",
    "anthropic>=0.40",
    "email-validator>=2.3.0",
    "bcrypt<4.0",
    "google-auth>=2.35",
    "requests>=2.32",
]

[dependency-groups]
ai = [
    "transformers>=4.46",
    "torch>=2.5",
    "langdetect>=1.0",
    "jieba>=0.42",
    "rake-nltk>=1.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.23.1",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
